fix: modal overflows mobile viewports

--- a/src/Resources/public/cookieconsent.css
+++ b/src/Resources/public/cookieconsent.css
@@ -162,6 +162,7 @@
         height: 100%;
         max-height: initial;
         width: 100%;
+        min-width: auto;
     }
 }
 
